# lmms

.github/workflows/: build.yml
cmake/modules/: PluginList.cmake
cmake/nsis/: lmms.exe.manifest
plugins/Architect2/: Architect2.cpp  Architect2.h  CMakeLists.txt
plugins/GranularPitchShifter/: CMakeLists.txt  GranularPitchShifter.cpp  GranularPitchShifter.h  GranularPitchShifterControlDialog.cpp  GranularPitchShifterControlDialog.h  GranularPitchShifterControls.cpp  GranularPitchShifterControls.h
plugins/LOMM/: LOMM.cpp  LOMM.h  LOMMControlDialog.cpp  LOMMControlDialog.h  LOMMControls.cpp  LOMMControls.h
plugins/Limiter/: CMakeLists.txt  Limiter.cpp  Limiter.h  LimiterControlDialog.cpp  LimiterControlDialog.h  LimiterControls.cpp  LimiterControls.h  OversamplingHelpers.h  SignalsmithEnvelopes.h
plugins/Mercury/: CMakeLists.txt  Mercury.cpp  Mercury.h
plugins/Mercury2/: CMakeLists.txt  Mercury2.cpp  Mercury2.h
plugins/Microwave/: CMakeLists.txt  Microwave.cpp  Microwave.h
plugins/Phaser/: PhaserControlDialog.cpp  PhaserEffect.cpp
plugins/Synchro/: CMakeLists.txt  SynchroSynth.cpp  SynchroSynth.h
src/core/: ConfigManager.cpp
src/gui/widgets/: LcdFloatSpinBox.cpp
